# player-career-arc

./: .gitignore  KANBAN.md  QA_CHECKLIST.md  README.md  TRELLO_IMPORT.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  generate-full-data.yml  publish-blob-data.yml
config/: annotations.example.csv  annotations.example.old.csv  players.example.csv
observable/: observablehq.config.js  package-lock.json  package.json
observable/scripts/: copy-player-history.mjs
observable/src/: index.md  styles.css
observable/src/.observablehq/cache/: _build.json
observable/src/components/: careerArcChart.js  historyStore.js  normalizeDataset.js  playerPicker.js
observable/src/data/: all_players_smoke.json  players.json  players_manifest.json
scripts/: build_frontend_snapshot.py  build_frontend_store.py  build_player_dataset.py
src/career_arc/: __init__.py  annotations.py  bref_scrape.py  lookup.py  pipeline.py  summaries.py
tests/: test_annotations.py  test_summaries.py
web/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
web/scripts/: sync-data.mjs  upload-blob-data.mjs  write-fixture-data.mjs
web/src/: App.test.tsx  App.tsx  styles.css  types.ts
web/src/components/: CareerArcChart.test.tsx  CareerArcChart.tsx  PlayerPicker.test.tsx  PlayerPicker.tsx  SeasonTable.test.tsx  SeasonTable.tsx
web/src/lib/: format.ts  historyStore.test.ts  historyStore.ts  normalizeDataset.test.ts  normalizeDataset.ts  urlState.test.ts  urlState.ts
web/src/test/: fixtures.ts  setup.ts
(+21827 files in other folders)
